--- a/index.html
+++ b/index.html
@@ -4,9 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Web App</title>
+    <link rel="stylesheet" href="css/index.css">
+    <title>Computer Lab Reservation</title>
 </head>
 <body>
-    <p>Hello World!</p>
+    <div class="login-container">
+        <div class="login-form">
+            <div class="login-text">
+                <span>Computer Lab Reservation</span>
+            </div>
+
+            <form class="register">
+                <input type="text" placeholder="Email Address"/>
+                <input type="password" placeholder="Password"/>
+                <input type="password" placeholder="Re-type Password"/>
+                <button>create</button>
+                <p class="message">Already registered? <a href="#">Sign In</a></p>
+            </form>
+            <form class="login">
+                <input type="text" placeholder="Email"/>
+                <input type="password" placeholder="Password"/>
+                <button>login</button>
+                <p class="message">Not registered? <a href="#">Create an account</a></p>
+            </form>
+        </div>
+    </div>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script><script  src="js/index.js"></script>
 </body>
 </html>
