Finished the code for reservation screen, need nlng fix css

--- a/html/reserve.html
+++ b/html/reserve.html
@@ -18,19 +18,19 @@
     </div>
     <div id="main">
         <div id="top">
-            <form id = "topform">
+            <form id = "topForm">
                 <div>
-                    <label>Lab Room: </label>
+                    <label for = "labForm">Lab Room: </label>
                     <select name = "labForm" id="labForm">
                     </select>
                 </div>
                 <div>
-                    <label>Date: </label>
+                    <label for = "dateForm">Date: </label>
                     <select name = "dateForm" id="dateForm">
                     </select>
                 </div>
                 <div>
-                    <label>Time: </label>
+                    <label for = "timeForm">Time: </label>
                     <select name = "timeForm" id="timeForm">
                     </select>
                 </div>
@@ -38,8 +38,8 @@
         </div>
         <div id="center">
         </div>
-        <div id="bottom">
-            sdfsdf
+        <div id="bottom" class = "hidden">
+    
         </div>
     </div>
     <script src="../js/reserve.js"></script>
