--- a/html/student_profile_reservations.html
+++ b/html/student_profile_reservations.html
@@ -38,6 +38,12 @@
                         <td>S1</td>
                         <td>06/01/23</td>
                         <td>06/06/23</td>
+                        <td>
+                            <a href="reserve.html"><img src = "../images/edit.png"> </a>
+                        </td>
+                        <td>
+                            <a href="reserve.html"><img src = "../images/delete.png"> </a>
+                        </td>
                     </tr>
                     <tr>
                         <td>R#101</td>
@@ -45,6 +51,12 @@
                         <td>S1</td>
                         <td>06/01/23</td>
                         <td>06/07/23</td>
+                        <td>
+                            <a href="reserve.html"><img src = "../images/edit.png"> </a>
+                        </td>
+                        <td>
+                            <a href="reserve.html"><img src = "../images/delete.png"> </a>
+                        </td>
                     </tr>
                     <tr>
                         <td>R#101</td>
@@ -52,14 +64,17 @@
                         <td>S1</td>
                         <td>06/01/23</td>
                         <td>06/09/23</td>
+                        <td>
+                            <a href="reserve.html"><img src = "../images/edit.png"> </a>
+                        </td>
+                        <td>
+                            <a href="reserve.html"><img src = "../images/delete.png"> </a>
+                        </td>
                     </tr>
                 </table>
             </div>
         </div>
     </div>
-    <footer>
-        asdfasdf
-    </footer>
 
 </body>
 </html>
