--- a/html/student_profile_settings.html
+++ b/html/student_profile_settings.html
@@ -31,8 +31,8 @@
                     </div>
                 </div>
                 <div class="buttons">
-                  <button class="logout-btn">Log out</button>
-                  <button class="delete-btn">Delete account</button>
+                  <button class="logout-btn" onclick="window.location.href='../index.html'">Log out</button>
+                  <button class="delete-btn" onclick="window.location.href='../index.html'">Delete account</button>
                 </div>
               </div>
         </div>
