Added Document Title

--- a/html/reserve.html
+++ b/html/reserve.html
@@ -5,17 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Reserve A Seat</title>
     <link rel="stylesheet" type="text/css" href="../css/reserve.css">
+    <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
 </head>
 
 <body>
-    <div id="navbar">
-        <a id="logo" href="reserve.html">Computer Laboratory Reservation</a>
+    <nav id="navbar">
+        <a id="logo" href="reserve.html">Arrow Laboratory</a>
         <a id="profile">Profile</a>
         <a id="login">Login</a>
         <a id="search">Search User</a>
-    </div>
+    </nav>
+
     <div id="main">
         <div id="top">
             <form id = "topForm">
