Changed all document titles

--- a/html/student_profile_reservations.html
+++ b/html/student_profile_reservations.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/student_profile.css">
-    <title>Student Profile Page Reservation</title>
+    <title>Arrow Laboratory</title>
 </head>
 <body>
     <header>
