--- a/html/student_profile_settings.html
+++ b/html/student_profile_settings.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/student_profile.css">
-    <title>Student Profile Page Settings</title>
+    <title>Arrow Laboratory</title>
 </head>
 <body>
     <header>
@@ -31,10 +31,10 @@
                     </div>
                 </div>
                 <div class="buttons">
-                  <button class="logout-btn" onclick="window.location.href='../index.html'">Log out</button>
-                  <button class="delete-btn" onclick="window.location.href='../index.html'">Delete account</button>
+                    <button class="logout-btn" onclick="window.location.href='../index.html'">Log out</button>
+                    <button class="delete-btn" onclick="window.location.href='../index.html'">Delete account</button>
                 </div>
-              </div>
+            </div>
         </div>
     </div>
 
