--- a/html/reserve.html
+++ b/html/reserve.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reserve A Seat</title>
+    <title>Arrow Laboratory</title>
     <link rel="stylesheet" type="text/css" href="../css/reserve.css">
     <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
 </head>
