--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
     <script src="js/index.js" defer></script> 
     <link rel="stylesheet" href="css/index.css">
-    <title>Computer Lab Reservation</title>
+    <title>Arrow Laboratory</title>
 </head>
 <body>
     <div class="background">
