--- a/html/reserve.html
+++ b/html/reserve.html
@@ -6,8 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arrow Laboratory</title>
+    <link rel="icon" href="../images/icon.jpg">
     <link rel="stylesheet" type="text/css" href="../css/reserve.css">
-    <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
+    <script src="../js/reserve.js" defer></script>
 </head>
 
 <body>
@@ -44,7 +45,6 @@
     
         </div>
     </div>
-    <script src="../js/reserve.js"></script>
 </body>
 
 </html>
