--- a/html/student_profile_settings.html
+++ b/html/student_profile_settings.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/student_profile.css">
     <title>Arrow Laboratory</title>
+    <link rel="icon" href="../images/icon.jpg">
+    <link rel="stylesheet" href="../css/student_profile.css">
 </head>
 <body>
     <header>
