--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">   
+    <title>Arrow Laboratory</title>
+    <link rel="icon" href="images/icon.jpg">
+    <link rel="stylesheet" href="css/index.css">
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
     <script src="js/index.js" defer></script> 
-    <link rel="stylesheet" href="css/index.css">
-    <title>Arrow Laboratory</title>
 </head>
 <body>
     <div class="background">
