Lanz's search profile

--- a/html/search_profile.html
+++ b/html/search_profile.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Arrow Laboratory</title>
+    <link rel="icon" href="../images/icon.jpg">
     <link rel="stylesheet" type="text/css" href="../css/search_profile.css">
+    <script src="../js/search_profile.js" defer></script>
 </head>
 
 <body>
@@ -16,12 +18,13 @@
         <a id="search">Search User</a>
     </div>
     <h1 id="PageTitle">Search User</h1>
+    <hr>
     <div id="userinfo">
         <div id="description">
 
         </div>
         <div id="reservations">
-            <table>
+            <table id="table">
                 <tr>
                     <th>Reservation</th>
                     <th>Room</th>
