small updates to serach profile

--- a/html/search_profile.html
+++ b/html/search_profile.html
@@ -18,12 +18,30 @@
         <a id="search">Search User</a>
     </div>
     <h1 id="PageTitle">Search User</h1>
-    <hr>
+    <hr id="searchLine">
+    <div class="center">
+        <label for="username">username:</label>
+        <input type="text" id="username" name="fname" placeholder="TYPEBITCH">
+    </div>
+
     <div id="userinfo">
         <div id="description">
-
+            <div id="descHead">
+                <h3 >Description</h3>
+                <hr id="descLine">
+            </div>
+            <div id="descBody">
+                <div id="icondiv">
+                    <img id="icon" src="../images/profile.png"/>
+                </div>
+                <div id="writtendesc">
+                    <p>sdfadf</p>
+                </div>
+            </div>
         </div>
         <div id="reservations">
+            <h3>Reservation</h3>
+            <hr id="resLine">
             <table id="table">
                 <tr>
                     <th>Reservation</th>
