--- a/html/reserve.html
+++ b/html/reserve.html
@@ -8,10 +8,12 @@
     <title>Arrow Laboratory</title>
     <link rel="icon" href="../images/icon.jpg">
     <link rel="stylesheet" type="text/css" href="../css/reserve.css">
+    <link rel="stylesheet" type="text/css" href="../css/navbar.css">
     <script src="../js/reserve.js" defer></script>
 </head>
 
 <body>
+    <!-- NavBar -->
     <nav id="navbar">
         <a id="logo" href="reserve.html">Arrow Laboratory</a>
         <a id="profile">Profile</a>
@@ -19,6 +21,7 @@
         <a id="search">Search User</a>
     </nav>
 
+    <!-- Main -->
     <div id="main">
         <div id="top">
             <form id = "topForm">
