--- a/html/student_profile_reservations.html
+++ b/html/student_profile_reservations.html
@@ -7,12 +7,18 @@
     <title>Arrow Laboratory</title>
     <link rel="icon" href="../images/icon.jpg">
     <link rel="stylesheet" href="../css/student_profile.css">
+    <link rel="stylesheet" type="text/css" href="../css/navbar.css">
 </head>
 <body>
-    <header>
-        Profile
-    </header>
+    <!-- NavBar -->
+    <nav id="navbar">
+        <a id="logo" href="reserve.html">Arrow Laboratory</a>
+        <a id="profile">Profile</a>
+        <a id="login">Login</a>
+        <a id="search">Search User</a>
+    </nav>
 
+    <!-- Main -->
     <div class = "container">
         <div class="side">
             <a href="student_profile_reservations.html">Reservations</a>
