Unified the navbar to 1 js and css file

--- a/html/search_profile.html
+++ b/html/search_profile.html
@@ -7,16 +7,18 @@
     <title>Arrow Laboratory</title>
     <link rel="icon" href="../images/icon.jpg">
     <link rel="stylesheet" type="text/css" href="../css/search_profile.css">
+    <link rel="stylesheet" type="text/css" href="../css/navbar.css">
     <script src="../js/search_profile.js" defer></script>
+    <script src="../js/navbar.js" defer></script>
 </head>
 
 <body>
-    <div id="navbar">
-        <a id="logo" href="reserve.html">Computer Laboratory Reservation</a>
-        <a id="profile">Profile</a>
-        <a id="login">Login</a>
-        <a id="search">Search User</a>
-    </div>
+    <!-- NavBar -->
+    <nav id="navbar">
+        
+    </nav>
+
+    <!-- Main -->
     <h1 id="PageTitle">Search User</h1>
     <hr id="searchLine">
     <div class="center">
