--- a/html/student_profile_reservations.html
+++ b/html/student_profile_reservations.html
@@ -8,14 +8,12 @@
     <link rel="icon" href="../images/icon.jpg">
     <link rel="stylesheet" href="../css/student_profile.css">
     <link rel="stylesheet" type="text/css" href="../css/navbar.css">
+    <script src="../js/navbar.js" defer></script>
 </head>
 <body>
     <!-- NavBar -->
     <nav id="navbar">
-        <a id="logo" href="reserve.html">Arrow Laboratory</a>
-        <a id="profile">Profile</a>
-        <a id="login">Login</a>
-        <a id="search">Search User</a>
+
     </nav>
 
     <!-- Main -->
