--- a/html/reserve.html
+++ b/html/reserve.html
@@ -10,15 +10,13 @@
     <link rel="stylesheet" type="text/css" href="../css/reserve.css">
     <link rel="stylesheet" type="text/css" href="../css/navbar.css">
     <script src="../js/reserve.js" defer></script>
+    <script src="../js/navbar.js" defer></script>
 </head>
 
 <body>
     <!-- NavBar -->
     <nav id="navbar">
-        <a id="logo" href="reserve.html">Arrow Laboratory</a>
-        <a id="profile">Profile</a>
-        <a id="login">Login</a>
-        <a id="search">Search User</a>
+        
     </nav>
 
     <!-- Main -->
