--- a/html/search_profile.html
+++ b/html/search_profile.html
@@ -8,6 +8,7 @@
     <link rel="icon" href="../images/icon.jpg">
     <link rel="stylesheet" type="text/css" href="../css/search_profile.css">
     <link rel="stylesheet" type="text/css" href="../css/navbar.css">
+    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="../js/search_profile.js" defer></script>
     <script src="../js/navbar.js" defer></script>
 </head>
