--- a/html/temp_reserve_guest.html
+++ b/html/temp_reserve_guest.html
@@ -9,6 +9,7 @@
     <link rel="icon" href="../images/icon.jpg">
     <link rel="stylesheet" type="text/css" href="../css/reserve.css">
     <link rel="stylesheet" type="text/css" href="../css/navbar.css">
+    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="../js/temp_reserve_guest.js" defer></script>
 </head>
 
