--- a/html/search_profile.html
+++ b/html/search_profile.html
@@ -6,11 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arrow Laboratory</title>
     <link rel="icon" href="../images/icon.jpg">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="../css/search_profile.css">
     <link rel="stylesheet" type="text/css" href="../css/navbar.css">
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script src="../js/search_profile.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../js/navbar.js" defer></script>
+    <script src="../js/search_profile.js" defer></script>
 </head>
 
 <body>
@@ -23,8 +25,11 @@
     <h1 id="PageTitle">Search User</h1>
     <hr id="searchLine">
     <div class="center">
-        <label for="username">username:</label>
-        <input type="text" id="username" name="fname" placeholder="TYPEBITCH">
+        <form action="">
+            <label for="username">username:</label>
+            <input type="text" id="username" name="fname" placeholder="TYPEBITCH" value="PunkGirl26">
+            <input type="submit" value="Submit">
+        </form>
     </div>
 
     <div id="userinfo">
@@ -37,24 +42,34 @@
                 <div id="icondiv">
                     <img id="icon" src="../images/profile.png"/>
                 </div>
-                <div id="writtendesc">
-                    <p>sdfadf</p>
+                <div id="descRight">
+                    <h2>Gwen Stacy</h2>
+                    <p id="searchusername">@PunkGirl26</p>
+                    <div id="writtendesc">
+                        <pre>Hi! my name is gwen stacy im from Earth 6969 and my I watched my bestfriend
+turn into a giant lizard. He got into an accident and went sleepy for forever.
+I meant this weird kid in another universe tho his name is Miles Morales.
+
+                        </pre>
+                    </div>
                 </div>
             </div>
         </div>
-        <div id="reservations">
-            <h3>Reservation</h3>
-            <hr id="resLine">
-            <table id="table">
-                <tr>
-                    <th>Reservation</th>
-                    <th>Room</th>
-                    <th>Seat</th>
-                    <th>Date Requested</th>
-                    <th>Date Reserved</th>
-                    <th></th>
-                    <th></th>
-                </tr>
+        <h3>Reservation</h3>
+        <hr id="resLine">  
+        <div id="reservations" class="table-wrapper-scroll-y my-custom-scrollbar">
+            <table id="table" class="table table-bordered table-striped mb-0">
+                <thead>
+                    <tr class="sticky">
+                        <th class="th-sm">Reservation</th>
+                        <th class="th-sm">Room</th>
+                        <th class="th-sm">Seat</th>
+                        <th class="th-sm">Date Requested</th>
+                        <th class="th-sm">Date Reserved</th>
+                        <th class="th-sm"></th>
+                        <th class="th-sm"></th>
+                    </tr>
+                </thead>
             </table>
         </div>
 
