Add some comments

--- a/html/temp_reserve_guest.html
+++ b/html/temp_reserve_guest.html
@@ -7,8 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arrow Laboratory</title>
     <link rel="icon" href="../images/icon.jpg">
+    
+    <!-- CSS Files -->
     <link rel="stylesheet" type="text/css" href="../css/reserve.css">
     <link rel="stylesheet" type="text/css" href="../css/navbar.css">
+    
+    <!-- JS Files -->
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="../js/temp_reserve_guest.js" defer></script>
 </head>
