--- a/html/search_profile.html
+++ b/html/search_profile.html
@@ -6,9 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arrow Laboratory</title>
     <link rel="icon" href="../images/icon.jpg">
+    
+    <!-- CSS Files -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="../css/search_profile.css">
     <link rel="stylesheet" type="text/css" href="../css/navbar.css">
+
+    <!-- JS Files -->
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../js/navbar.js" defer></script>
