--- a/html/student_profile_reservations.html
+++ b/html/student_profile_reservations.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+    
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arrow Laboratory</title>
     <link rel="icon" href="../images/icon.jpg">
+
+    <!-- CSS Files -->
     <link rel="stylesheet" type="text/css" href="../css/navbar.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/student_profile.css">
+
+    <!-- JS Files -->
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../js/navbar.js" defer></script>
