--- a/html/temp_admin_profile.html
+++ b/html/temp_admin_profile.html
@@ -32,7 +32,7 @@
         <br>
         
         <h3 class="font-weight-bold py-3 mb-4 font">
-            Profile
+            Admin Profile
         </h3>
 
         <div class="card overflow-hidden">
