--- a/html/student_profile.html
+++ b/html/student_profile.html
@@ -17,8 +17,8 @@
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../js/navbar.js" defer></script>
-    <script src="../js/student_profile.js" defer></script>
-    <script src="../js/search_profile.js" defer></script>
+    <script src="../js/student_profile.js" type = "module" defer></script>
+    <!-- Not sure why this is here? <script src="../js/search_profile.js" type = "module" defer></script> -->
 </head>
 <body>
     <!-- NavBar -->
@@ -128,19 +128,6 @@
                         <div class="tab-pane fade" id="reservations">
                             <div class="card-body pb-2">
                                 <table id="table" class="table table-bordered table-striped mb-0">
-                                    <thead>
-                                        <tr class="sticky">
-                                            <th class="th-sm">Reservation</th>
-                                            <th class="th-sm">Room</th>
-                                            <th class="th-sm">Seat</th>
-                                            <th class="th-sm">Date Requested</th>
-                                            <th class="th-sm">Date Reserved</th>
-                                            <th class="th-sm">Start Time</th>
-                                            <th class="th-sm">End Time</th>
-                                            <th class="th-sm"></th>
-                                            <th class="th-sm"></th>
-                                        </tr>
-                                    </thead>
                                 </table>
                             </div>
                             <br>
