--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">   
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arrow Laboratory</title>
     <link rel="icon" href="images/icon.jpg">
     <link rel="stylesheet" href="css/index.css">
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-    <script src="js/index.js" defer></script> 
+    <script src="js/index.js" type="module" defer></script>
 </head>
+
 <body>
     <div class="background">
         <div class="login-container">
@@ -17,20 +19,22 @@
                 <div class="login-text">
                     <span>Arrow Laboratory</span>
                 </div>
-    
+
                 <form id="register">
-                    <input type="text" name="regEmail" id="regEmail-field" placeholder="Email Address"/>
-                    <input type="password" name="regPassword" id="regPassword-field" placeholder="Password"/>
-                    <input type="password" name="regConfirmPassword" id="regConfirmPassword-field" placeholder="Re-type Password"/>
+                    <input type="text" name="regEmail" id="regEmail-field" placeholder="Email Address" />
+                    <input type="password" name="regPassword" id="regPassword-field" placeholder="Password" />
+                    <input type="password" name="regConfirmPassword" id="regConfirmPassword-field"
+                        placeholder="Re-type Password" />
                     <input type="submit" value="Register" class="formBtn" id="register-form-submit">
                     <p class="message" id="registerMessage">Already registered? <a href="#">Sign In</a></p>
                 </form>
-    
+
                 <form id="login">
-                    <input type="text" name="logEmail" id="logEmail-field" placeholder="Email"/>
-                    <input type="password" name="logPassword" id="logPassword-field" placeholder="Password"/>
+                    <input type="text" name="logEmail" id="logEmail-field" placeholder="Email" />
+                    <input type="password" name="logPassword" id="logPassword-field" placeholder="Password" />
                     <input type="submit" value="Login" class="formBtn" id="login-form-submit">
-                    <input type="checkbox" value="lsRememberMe" id="rememberMe"><label for="rememberMe">Remember Me?</label>
+                    <input type="checkbox" value="lsRememberMe" id="rememberMe"><label for="rememberMe">Remember
+                        Me?</label>
                     <br><br>
                     <p class="message" id="guestMessage">Guest? <a href="#">Guest Login</a></p>
                     <p class="message" id="registerMessage">Not registered? <a href="#">Create an account</a></p>
@@ -39,4 +43,5 @@
         </div>
     </div>
 </body>
+
 </html>
