Restyled search user page

--- a/html/search_profile.html
+++ b/html/search_profile.html
@@ -49,24 +49,29 @@
                         Description
                     </h4>
                     <hr id="descLine">
+                    <br>
                 </div>
                 <div id="descBody">
                     <div id="icondiv">
                         <img id="icon" src="../images/profile.png"/>
                     </div>
                     <div id="descRight">
-                        <h2>Tyler Tan</h2>
-                        <p id="searchusername">@tyler_tan</p>
+                        <div id="displayName">
+                            <h2>Tyler Tan</h2>
+                            <p id="searchusername">@tyler_tan</p>
+                        </div>
                         <div id="writtendesc">
                             <p>Hello, I am Tyler Tan. Studying BSMS in DLSU.</p>
                         </div>
                     </div>
                 </div>
             </div>
+            <br><br>
             <h4 class="font-weight-bold py-3 mb-4 font">
-                Reservation
+                Reservations
             </h4>
             <hr id="resLine">  
+            <br>
             <div id="reservations" class="table-wrapper-scroll-y my-custom-scrollbar">
                 <table id="table" class="table table-bordered table-striped mb-0">
                     
