--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
                     <input type="text" name="logEmail" id="logEmail-field" placeholder="Email" />
                     <input type="password" name="logPassword" id="logPassword-field" placeholder="Password" />
                     <input type="submit" value="Login" class="formBtn" id="login-form-submit">
-                    <input type="checkbox" value="lsRememberMe" id="rememberMe"><label for="rememberMe">Remember
-                        Me?</label>
+                    <input type="checkbox" value="lsRememberMe" id="rememberMe"><label for="rememberMe">Remember Me?</label>
                     <br><br>
                     <p class="message" id="guestMessage">Guest? <a href="#">Guest Login</a></p>
                     <p class="message" id="registerMessage">Not registered? <a href="#">Create an account</a></p>
