--- a/html/student_profile.html
+++ b/html/student_profile.html
@@ -82,7 +82,7 @@
                                     <div class="form-control mb-1">tyler_tan@dlsu.edu.ph</div>
                                 </div>
                                 <div class="form-group">
-                                    <label class="form-label">Bio</label>
+                                    <label class="form-label">Description</label>
                                     <textarea class="form-control" rows="5" id="bioText">Hello, I am Tyler Tan. Studying BSMS in DLSU.</textarea>
                                 </div>
                             </div>
