--- a/html/temp_admin_reserve.html
+++ b/html/temp_admin_reserve.html
@@ -15,7 +15,7 @@
     <!-- JS Files -->
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="../js/temp_admin_navbar.js" defer></script>
-    <script src="../js/reserve.js" defer></script>
+    <script type="module"src="../js/temp_admin_reserve.js" defer></script>
 </head>
 
 <body>
