fixed image on search

--- a/html/search_profile.html
+++ b/html/search_profile.html
@@ -60,7 +60,7 @@
                 </div>
                 <div id="descBody">
                     <div id="icondiv">
-                        <img id="icon" src="../images/gwen_stacy.png"/>
+                        <img id="icon" src="../images/tyler_tan.jpg"/>
                     </div>
                     <div id="descRight">
                         <div id>
