almost done, just needs more testing for MCO1

--- a/html/temp_admin_profile.html
+++ b/html/temp_admin_profile.html
@@ -17,8 +17,8 @@
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../js/temp_admin_navbar.js" defer></script>
-    <script src="../js/temp_admin_profile.js" defer></script>
-    <script src="../js/search_profile.js" defer></script>
+    <script src="../js/temp_admin_profile.js" type="module" defer></script>
+    <!-- Not sure why this is here? <script src="../js/search_profile.js" type = "module" defer></script> -->
 </head>
 <body>
     <!-- NavBar -->
@@ -75,7 +75,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label class="form-label">Name</label>
-                                    <div class="form-control mb-1">admin1</div>
+                                    <div class="form-control mb-1">Lappland Saluzzo</div>
                                 </div>
                                 <div class="form-group">
                                     <label class="form-label">E-mail</label>
