--- a/html/student_profile.html
+++ b/html/student_profile.html
@@ -55,7 +55,7 @@
                             <br>
 
                             <div class="card-body media align-items-center">
-                                <img src="https://bootdey.com/img/Content/avatar/avatar1.png" alt class="d-block ui-w-80 profilePic">
+                                <img src="../images/tyler_tan.jpg" alt class="d-block ui-w-80 profilePic">
                                 <div class="media-body ml-4">
                                     <label class="btn btn-outline-primary">
                                         Upload new photo
@@ -83,7 +83,7 @@
                                 </div>
                                 <div class="form-group">
                                     <label class="form-label">Description</label>
-                                    <textarea class="form-control" rows="5" id="bioText">Hello, I am Tyler Tan. Studying BSMS in DLSU.</textarea>
+                                    <textarea class="form-control" rows="5" id="bioText">My name is Tyler currently learning japanesse and watashiwa playing 4.5 gachas currently.</textarea>
                                 </div>
                             </div>
 
