--- a/html/temp_admin_search_profile.html
+++ b/html/temp_admin_search_profile.html
@@ -8,13 +8,16 @@
     <link rel="icon" href="../images/icon.jpg">
     
     <!-- CSS Files -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="../css/search_profile.css">
     <link rel="stylesheet" type="text/css" href="../css/navbar.css">
 
     <!-- JS Files -->
+
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/js/bootstrap.bundle.min.js"></script>
+
     <script src="../js/temp_admin_navbar.js" defer></script>
     <script src="../js/search_profile.js" type="module" defer></script>
 </head>
@@ -34,11 +37,15 @@
             Search User
         </h3>
         <hr id="searchLine">
-        <div class="center">
+        <div class="center" id="searchDiv">
             <form action="" id="searchForm">
-                <label for="username">Username:</label>
+                <input type="text" name="fname" placeholder="Search User..." id="textSearch" value="tyler_tan@dlsu.edu.ph">
+                <button type="submit" id="searchButton"><i class="fa fa-search" 
+                aria-hidden="true"></i></button>
+                <!--<label for="username">Username:</label>
                 <input type="text" id="username" name="fname" placeholder="Username" value="tyler_tan@dlsu.edu.ph">
                 <input type="submit" id="searchButton" value="Search">
+                <a id="searchButton"></a>-->
             </form>
         </div>
     
@@ -53,15 +60,15 @@
                 </div>
                 <div id="descBody">
                     <div id="icondiv">
-                        <img id="icon" src="../images/profile.png"/>
+                        <img id="icon" src="../images/tyler_tan.jpg"/>
                     </div>
                     <div id="descRight">
-                        <div id="displayName">
-                            <h2>Tyler Tan</h2>
-                            <p id="searchusername">@tyler_tan</p>
+                        <div id>
+                            <h2 id="displayName">Tyler Tan</h2>
+                            <p id="username">@tyler_tan</p>
                         </div>
                         <div id="writtendesc">
-                            <p>Hello, I am Tyler Tan. Studying BSMS in DLSU.</p>
+                            <p>My name is Tyler currently learning japanesse and watashiwa playing 4.5 gachas currently.</p>
                         </div>
                     </div>
                 </div>
@@ -79,7 +86,7 @@
             </div>
         </div>
     </div>
-
+    <br><br><br>
 
 </body>
 
