--- a/html/temp_guest_reserve.html
+++ b/html/temp_guest_reserve.html
@@ -14,14 +14,13 @@
     
     <!-- JS Files -->
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script src="../js/temp_reserve_guest.js" defer></script>
+    <script src="../js/temp_guest_navbar.js" defer></script>
+    <script src="../js/temp_guest_reserve.js" type = "module" defer></script>
 </head>
 
 <body>
     <!-- NavBar -->
     <nav id="navbar">
-        <a id="logo" href="reserve.html">Arrow Laboratory</a>
-        <a id="login">Login</a>
     </nav>
 
     <!-- Main -->
