--- a/html/temp_guest_search_profile.html
+++ b/html/temp_guest_search_profile.html
@@ -14,11 +14,11 @@
     <link rel="stylesheet" type="text/css" href="../css/navbar.css">
 
     <!-- JS Files -->
-    
+
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/js/bootstrap.bundle.min.js"></script>
-    
-    <script src="../js/navbar.js" defer></script>
+
+    <script src="../js/temp_guest_navbar.js" defer></script>
     <script src="../js/search_profile.js" type="module" defer></script>
 </head>
 
