--- a/html/student_profile.html
+++ b/html/student_profile.html
@@ -18,7 +18,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../js/navbar.js" defer></script>
     <script src="../js/student_profile.js" type="module" defer></script>
-    <!-- Not sure why this is here? <script src="../js/search_profile.js" type = "module" defer></script> -->
+    <!-- Not sure why this is here? <script src="../js/search_profile.js" type = "module" defer></script>dfsdfdsfdsf -->
 </head>
 <body>
     <!-- NavBar -->
