--- a/html/reserve.html
+++ b/html/reserve.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" type="text/css" href="../css/navbar.css">
     
     <!-- JS Files -->
-    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+    <script src="../js/jquery-1.10.2.js"></script>
     <script src="../js/navbar.js" defer></script>
     <script type="module" src="../js/reserve.js" defer></script>
 </head>
