--- a/html/temp_admin_profile.html
+++ b/html/temp_admin_profile.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="../css/student_profile.css">
 
     <!-- JS Files -->
-    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+    <script src="../js/jquery-1.10.2.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../js/temp_admin_navbar.js" defer></script>
     <script src="../js/temp_admin_profile.js" type="module" defer></script>
