--- a/html/temp_guest_reserve.html
+++ b/html/temp_guest_reserve.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" type="text/css" href="../css/navbar.css">
     
     <!-- JS Files -->
-    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+    <script src="../js/jquery-1.10.2.js"></script>
     <script src="../js/temp_guest_navbar.js" defer></script>
     <script src="../js/temp_guest_reserve.js" type = "module" defer></script>
 </head>
