added a time range in search

--- a/html/reserve.html
+++ b/html/reserve.html
@@ -42,7 +42,11 @@
                     <label for = "timeForm">Time: </label>
                     <select name = "timeForm" id="timeForm">
                     </select>
+                    <span>to</span>
+                    <select name = "timeForm" id="timeFormEnd">
+                    </select>
                 </div>
+                <button type="submit">Search</button>
             </form>
         </div>
 
