added slot interval fuction to the js

--- a/html/reserve.html
+++ b/html/reserve.html
@@ -43,7 +43,7 @@
                     <select name = "timeForm" id="timeForm">
                     </select>
                     <span>to</span>
-                    <select name = "timeForm" id="timeFormEnd">
+                    <select name = "timeFormEnd" id="timeFormEnd">
                     </select>
                 </div>
             </form>
