--- a/NEW/public/html/admin_profile.html
+++ b/NEW/public/html/admin_profile.html
@@ -16,8 +16,8 @@
     <!-- JS Files -->
     <script src="../js/jquery-1.10.2.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="../js/temp_admin_navbar.js" defer></script>
-    <script src="../js/temp_admin_profile.js" type="module" defer></script>
+    <script src="../js/navbar.js" defer></script>
+    <script src="../js/admin_profile.js" type="module" defer></script>
     <!-- Not sure why this is here? <script src="../js/search_profile.js" type = "module" defer></script> -->
 </head>
 <body>
@@ -72,10 +72,6 @@
                                 <div class="form-group">
                                     <label class="form-label">Username</label>
                                     <div class="form-control mb-1">admin1</div>
-                                </div>
-                                <div class="form-group">
-                                    <label class="form-label">Name</label>
-                                    <div class="form-control mb-1">Lappland Saluzzo</div>
                                 </div>
                                 <div class="form-group">
                                     <label class="form-label">E-mail</label>
