--- a/NEW/public/html/index.html
+++ b/NEW/public/html/index.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arrow Laboratory</title>
-    <link rel="icon" href="images/icon.jpg">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="icon" href="../images/icon.jpg">
+    <link rel="stylesheet" href="../css/index.css">
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-    <script src="js/index.js" type="module" defer></script>
+    <script src="../js/index.js" type="module" defer></script>
 </head>
 
 <body>
