--- a/NEW/public/html/student_profile.html
+++ b/NEW/public/html/student_profile.html
@@ -55,7 +55,7 @@
                             <br>
 
                             <div class="card-body media align-items-center">
-                                <img src="../images/tyler_tan.jpg" alt class="d-block ui-w-80 profilePic">
+                                <img src id="profilepic" alt class="d-block ui-w-80 profilePic">
                                 <div class="media-body ml-4">
                                     <label class="btn btn-outline-primary">
                                         Upload new photo
@@ -71,19 +71,15 @@
                                 
                                 <div class="form-group">
                                     <label class="form-label">Username</label>
-                                    <div class="form-control mb-1">tyler_tan</div>
-                                </div>
-                                <div class="form-group">
-                                    <label class="form-label">Name</label>
-                                    <div class="form-control mb-1">Tyler Tan</div>
+                                    <div class="form-control mb-1" id="username"></div>
                                 </div>
                                 <div class="form-group">
                                     <label class="form-label">E-mail</label>
-                                    <div class="form-control mb-1">tyler_tan@dlsu.edu.ph</div>
+                                    <div class="form-control mb-1" id="email"></div>
                                 </div>
                                 <div class="form-group">
                                     <label class="form-label">Description</label>
-                                    <textarea class="form-control" rows="5" id="bioText">My name is Tyler currently learning japanesse and watashiwa playing 4.5 gachas currently.</textarea>
+                                    <textarea class="form-control" rows="5" id="bioText"></textarea>
                                 </div>
                             </div>
 
