--- a/NEW/public/html/student_profile.html
+++ b/NEW/public/html/student_profile.html
@@ -98,23 +98,23 @@
 
                                 <div class="form-group">
                                     <label class="form-label">Current password</label>
-                                    <input type="password" class="form-control">
+                                    <input type="password" id="oldPw" class="form-control">
                                 </div>
 
                                 <div class="form-group">
-                                    <label class="form-label">New password</label>
-                                    <input type="password" class="form-control">
+                                    <label class="form-label" >New password</label>
+                                    <input type="password" id="newPw" class="form-control">
                                 </div>
 
                                 <div class="form-group">
                                     <label class="form-label">Re-type New password</label>
-                                    <input type="password" class="form-control">
+                                    <input type="password" id="confirmPw" class="form-control">
                                 </div>
 
                             </div>
                             
                             <div class="text-center">
-                                <button type="button" class="btn btn-primary" id="saveBtn">Save changes</button>&nbsp;
+                                <button type="button" class="btn btn-primary" id="saveBtnPw">Save changes</button>&nbsp;
                                 <button type="button" class="btn btn-default" id="cancelBtn">Cancel</button>
                             </div>
                             <br>
