--- a/NEW/public/html/search_profile.html
+++ b/NEW/public/html/search_profile.html
@@ -39,9 +39,8 @@
         <hr id="searchLine">
         <div class="center" id="searchDiv">
             <form action="" id="searchForm">
-                <input type="text" name="fname" placeholder="Search User..." id="textSearch" value="tyler_tan@dlsu.edu.ph">
-                <button type="submit" id="searchButton"><i class="fa fa-search" 
-                aria-hidden="true"></i></button>
+                <input type="text" name="fname" placeholder="Search User..." id="textSearch">
+                <button type="submit" id="searchButton"><i class="fa fa-search" aria-hidden="true"></i></button>
                 <!--<label for="username">Username:</label>
                 <input type="text" id="username" name="fname" placeholder="Username" value="tyler_tan@dlsu.edu.ph">
                 <input type="submit" id="searchButton" value="Search">
@@ -60,15 +59,15 @@
                 </div>
                 <div id="descBody">
                     <div id="icondiv">
-                        <img id="icon" src="../images/tyler_tan.jpg"/>
+                        <img id="icon" src="../images/student_profile.jpg"/>
                     </div>
                     <div id="descRight">
                         <div id>
-                            <h2 id="displayName">Tyler Tan</h2>
-                            <p id="username">@tyler_tan</p>
+                            <h2 id="displayName">Name</h2>
+                            <p id="username">@Username</p>
                         </div>
                         <div id="writtendesc">
-                            <p>My name is Tyler currently learning japanesse and watashiwa playing 4.5 gachas currently.</p>
+                            <p></p>
                         </div>
                     </div>
                 </div>
