--- a/NEW/public/html/search_profile.html
+++ b/NEW/public/html/search_profile.html
@@ -67,7 +67,7 @@
                             <p id="username">@Username</p>
                         </div>
                         <div id="writtendesc">
-                            <p></p>
+                            <p style="color: grey;">Description</p>
                         </div>
                     </div>
                 </div>
