joint session coding

--- a/NEW/public/html/reserve.html
+++ b/NEW/public/html/reserve.html
@@ -29,18 +29,18 @@
         <div id="top">
             <form id = "topForm">
                 <div>
-                    <label for = "labForm">Lab Room: </label>
-                    <select name = "labForm" id="labForm">
+                    <label for="labForm">Lab Room: </label>
+                    <select name="labForm" id="labForm">
                     </select>
                 </div>
                 <div>
-                    <label for = "dateForm">Date: </label>
-                    <select name = "dateForm" id="dateForm">
-                    </select>
+                    <label for="dateForm">Date: </label>
+                    <input type="date" name="dateForm" id="dateForm">
+                    </input>
                 </div>
                 <div>
-                    <label for = "timeForm">Time: </label>
-                    <select name = "timeForm" id="timeForm">
+                    <label for="timeForm">Time: </label>
+                    <select name="timeForm" id="timeForm">
                     </select>
                     <span>to</span>
                     <select name = "timeFormEnd" id="timeFormEnd">
