--- a/NEW/public/html/student_profile.html
+++ b/NEW/public/html/student_profile.html
@@ -123,7 +123,7 @@
 
                         <!-- View Reservations -->
                         <div class="tab-pane fade" id="reservations">
-                            <div class="card-body pb-2">
+                            <div class="card-body p-2">
                                 <table id="table" class="table table-bordered table-striped mb-0">
                                 </table>
                             </div>
