--- a/NEW/public/html/admin_profile.html
+++ b/NEW/public/html/admin_profile.html
@@ -55,7 +55,7 @@
                             <br>
 
                             <div class="card-body media align-items-center">
-                                <img src="https://bootdey.com/img/Content/avatar/avatar1.png" alt class="d-block ui-w-80 profilePic">
+                                <img src id="profilepic" alt class="d-block ui-w-80 profilePic">
                                 <div class="media-body ml-4">
                                     <label class="btn btn-outline-primary">
                                         Upload new photo
@@ -71,11 +71,11 @@
                                 
                                 <div class="form-group">
                                     <label class="form-label">Username</label>
-                                    <div class="form-control mb-1">admin1</div>
+                                    <div class="form-control mb-1" id="username"></div>
                                 </div>
                                 <div class="form-group">
                                     <label class="form-label">E-mail</label>
-                                    <div class="form-control mb-1">admin1@dlsu.edu.ph</div>
+                                    <div class="form-control mb-1" id="email"></div>
                                 </div>
                             </div>
 
