remove fields in changepw

--- a/public/html/student_profile.html
+++ b/public/html/student_profile.html
@@ -116,7 +116,7 @@
                             
                             <div class="text-center">
                                 <button type="button" class="btn btn-primary" id="saveBtnPw">Save changes</button>&nbsp;
-                                <button type="button" class="btn btn-default" id="cancelBtn">Cancel</button>
+                                <button type="button" class="btn btn-default" id="cancelBtnPw">Cancel</button>
                             </div>
                             <br>
                         </div>
