--- a/public/html/search_profile.html
+++ b/public/html/search_profile.html
@@ -48,7 +48,10 @@
             </form>
         </div>
     
-        <div id="userinfo">
+        <div id="searchResult">
+        </div>
+
+        <div id="userinfo" style="display: none;">
             <div id="description">
                 <div id="descHead">
                     <h4 class="font-weight-bold py-3 mb-4 font">
