admin unable to delete acc

--- a/public/html/admin_profile.html
+++ b/public/html/admin_profile.html
@@ -74,7 +74,7 @@
 
                             <div class="text-center">
                                 <button type="button" class="btn btn-secondary" id="logoutBtn">Log Out</button>
-                                <button type="button" class="btn btn-outline-danger" id="deleteBtn">Delete Account</button>
+                                <!-- <button type="button" class="btn btn-outline-danger" id="deleteBtn">Delete Account</button> -->
                             </div>
                             <br>
                         </div>
